<resources>
    <string name="app_name">Eventx</string>
    <string name="menu_home">Home</string>
    <string name="menu_account">Conta</string>
    <string name="menu_my_events">Meus eventos</string>
    <string name="menu_create_events">Criar evento</string>
    <string name="menu_settings">Configurações</string>
    <string name="menu_logout">Logout</string>
    <string name="enter">Entrar</string>
    <string name="toggle_open">Abrir</string>
    <string name="toggle_close">Fechar</string>
    <string name="txt_layout_email">Email</string>
    <string name="txt_layout_password">Senha</string>
    <string name="btn_login_enter">Entrar</string>
    <string name="txt_forgot_password">Esqueci minha senha</string>
    <string name="txt_no_account">Não tem cadastro?</string>
    <string name="txt_title_login">Login</string>
    <string name="txt_layout_name">Nome</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="txt_title_new_user">Novo Usuário</string>
    <string name="msg_erro_password">A senha tem que possuir no mínimo 6 caracteres.</string>
    <string name="msg_login">Usuário e/ou senha inválidos!</string>
    <string name="txt_email">Email</string>
    <string name="Enviar" />
    <string name="btn_ok_resetar_senha">Enviar</string>
    <string name="msg_resetar_email">Verifique seu e-mail para resetar a senha.</string>
    <string name="btn_cancel_resetar_senha">Cancelar</string>
    <string name="title_dialog_resetar_senha">Resetar Senha</string>
    <string name="txt_layout_event_name">Nome</string>
    <string name="txt_layout_event_initial_date">Início</string>
    <string name="txt_layout_event_end_date">Fim</string>
    <string name="txt_layout_event_description">Descrição</string>
    <string name="txt_button_add_event">Cadastrar</string>
    <string name="txt_title_new_event">Novo Evento</string>

    <!-- array com os estados disponíveis -->
    <string-array name="states">
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
        <item>Distrito Federal</item>
    </string-array>

    <!-- array com os países disponíveis -->
    <string-array name="countries">
        <item>Argentina</item>
        <item>Bolívia</item>
        <item>Brasil</item>
        <item>Chile</item>
        <item>Colômbia</item>
        <item>Equador</item>
        <item>Guiana</item>
        <item>Paraguai</item>
        <item>Peru</item>
        <item>Suriname</item>
        <item>Uruguai</item>
        <item>Venezuela</item>
    </string-array>

    <!-- array com as permissões disponíveis -->
    <string-array name="roles">
        <item>Administrador</item>
        <item>Usuário comum</item>
    </string-array>

    <!-- array com os status disponíveis -->
    <string-array name="status">
        <item>Active</item>
        <item>InProgress</item>
        <item>Finished</item>
        <item>Canceled</item>
    </string-array>

</resources>