<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:id="@+id/nav_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_menu_home"/>
    <item android:id="@+id/nav_account"
        android:title="@string/menu_account"
        android:icon="@drawable/ic_menu_account" />
    <item android:id="@+id/nav_my_events"
        android:title="@string/menu_my_events"
        android:icon="@drawable/ic_menu_my_events" />
    <item android:id="@+id/nav_events"
        android:title="@string/menu_create_events"
        android:icon="@drawable/ic_menu_new_event" />
    <item android:id="@+id/nav_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_menu_settings" />
    <item android:id="@+id/nav_logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/ic_menu_logout" />
</menu>