<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/menu_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/txt_layout_event_name"
            app:boxStrokeColor="@color/tertiaryColor"
            app:placeholderTextColor="@color/tertiaryColor"
            app:hintTextColor="@color/tertiaryColor"
            app:counterOverflowTextColor="@color/tertiaryColor">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_edt_event_name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/txt_layout_event_initial_date"
                app:boxStrokeColor="@color/tertiaryColor"
                app:placeholderTextColor="@color/tertiaryColor"
                app:hintTextColor="@color/tertiaryColor"
                app:counterOverflowTextColor="@color/tertiaryColor">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_edt_initial_date"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>
            
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/txt_layout_event_end_date"
                app:boxStrokeColor="@color/tertiaryColor"
                app:placeholderTextColor="@color/tertiaryColor"
                app:hintTextColor="@color/tertiaryColor"
                app:counterOverflowTextColor="@color/tertiaryColor">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_edt_end_date"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/tertiaryColor"
            android:hint="@string/txt_layout_event_description"
            app:placeholderTextColor="@color/tertiaryColor"
            app:hintTextColor="@color/tertiaryColor"
            app:counterOverflowTextColor="@color/tertiaryColor">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_edt_event_descricao"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:padding="10dp"
            android:background="@drawable/border_circular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/sp_status"
            android:entries="@array/status"
            android:visibility="gone"
            style="@style/Widget.AppCompat.Spinner.DropDown" />

        <Button
            android:id="@+id/btn_add_event"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_button_add_event"/>
    </LinearLayout>

</LinearLayout>